# rfp-copilot

./: .gitignore  CLAUDE.md  README.md
docs/: Externaltools.md  architecture.md  claude-code-delegation-phase-ui.md  claude-code-delegation-test-guide-fixes.md  dataflow.md  demo-script.md  demo-test-guide.md  demoscript.md  knowledgesources.md  productionRAGaccuracy.md  scoringmechanism.md  technical-faqs.md  test-guide.md
infra/: cdk.context.json  cdk.json  outputs.json  package-lock.json  package.json
lambdas/: pyproject.toml
lambdas/confidence_scorer/: handler.py  scorer.py
lambdas/excel_parser/: handler.py  parser.py
lambdas/excel_writer/: handler.py  requirements.txt  writer.py
lambdas/generator/: handler.py  requirements.txt
lambdas/hard_rules/: handler.py  rules.py
lambdas/ingestion_trigger/: handler.py
lambdas/mock_sources/: handler.py  requirements.txt
lambdas/question_classifier/: dispatch.py  handler.py
lambdas/retriever/: handler.py
lambdas/review_api/: handler.py
lambdas/review_gate/: handler.py
lambdas/shared/: __init__.py  bedrock_client.py  logging_config.py  models.py
lambdas/staleness_daemon/: handler.py
lambdas/tests/: test_confidence_scorer.py  test_excel_parser.py  test_hard_rules.py  test_retriever_kb_adapter.py  test_source_authority.py
lambdas/upload_api/: handler.py
plans/: image-7-still-no-snazzy-fairy.md
scripts/: create_demo_rfps.py  deploy-for-demo.sh  generate_corpus_documents.py  generate_synthetic_data.py  ingest_corpus.py  recycle.sh  reset-demo.sh  seed_customer_refs.py  seed_reference_data.py  (+3 more)
(+91 files in other folders)
