[project]
name = "rfp-copilot-lambdas"
version = "0.1.0"
description = "Python Lambda sources for the RFP Redlining Copilot"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.2",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-openpyxl",
    "moto[s3,dynamodb]>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "excel_parser*", "question_classifier*", "retriever*",
           "generator*", "confidence_scorer*", "hard_rules*", "excel_writer*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "S", "T20", "RET", "SIM", "ARG"]
ignore = ["S101"]  # asserts OK in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
